--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -9,7 +9,8 @@
 /* You can override the default Infima variables here. */
 :root {
   /* 18181b */
-  --ifm-color-primary: #2e8555;
+  /* --ifm-color-primary: #2e8555; */
+  --ifm-color-primary: #171717;
   --ifm-color-primary-dark: #29784c;
   --ifm-color-primary-darker: #277148;
   --ifm-color-primary-darkest: #205d3b;
@@ -22,7 +23,7 @@
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
+  --ifm-color-primary: #e3e3e3;
   --ifm-color-primary-dark: #21af90;
   --ifm-color-primary-darker: #1fa588;
   --ifm-color-primary-darkest: #1a8870;
@@ -31,32 +32,26 @@
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
-body{
+
+body {
   overflow-y: hidden;
   height: calc(100vh-100px);
   font-family: "Poppins" !important;
 }
-.features_src-components-HomepageFeatures-styles-module{
+
+.features_src-components-HomepageFeatures-styles-module {
   padding: 0 !important;
 }
-.hero{
-  /* background-color: #f5f5f5; */
-    /* background-color: rgb(235, 235, 235); */
 
-    /* background-image: linear-gradient(to top, #09203f 0%, #537895 100%); */
-/* background-image: linear-gradient(45deg, #874da2 0%, #c43a30 100%); */
-
-
-/* background-image: linear-gradient(to top, #1e3c72 0%, #1e3c72 1%, #2a5298 100%); */
-
-
-
-
+.black_color {
+  color: var(--ifm-color-primary);
 }
-.header{
+
+.header {
   height: 100vh;
 }
-.hero{
+
+.hero {
   /* height: 100vh; */
 
   background: none !important;
@@ -67,11 +62,14 @@ body{
   background-image: url("https://tailwindcss.com/_next/static/media/docs@tinypng.d9e4dcdc.png");
 
 }
-.hero__title, .hero__subtitle{
-  color: #18181b;
+
+.hero__title,
+.hero__subtitle {
+  /* color: #18181b; */
   /* color: white; */
 }
-.button--lg{
+
+.button--lg {
   width: 100%;
   max-width: 250px;
 }
